SCRUM-178: Follow API, tests, docs
