# backend/controllers/userController.js
@@ -22,6 +22,39 @@ const { parseUserId, validateName } = require('../utils/validationUtils');
 const { EQUIP_LIMITS } = require('../../shared/itemConfig');
 
 /**
+ * Helper function, ensures followee exists 
+ * and checks if follower is following followee
+ * Used in followUser and unfollowUser
+ * 
+ * @param   {Object} db         - Database connection pool
+ * @param   {Object} followerId - The ID of the follower user
+ * @param   {number} followeeId - The ID of the followee user
+ * @param   {string} context    - Caller name for error logging (e.g. 'followUser')
+ * @throws  {AppError} 404      - If followee ID not found
+ * @returns {Promise<boolean>}  - True if follower is currently following followee, else false
+ */
+const isFollowing = async (db, followerId, followeeId, context) => {
+  // Ensure the user we want to (un)follow exists
+  const [users] = await db.query(
+    'SELECT ID FROM User WHERE ID = ?',
+    [followeeId]
+  );
+  if (users.length === 0)
+  {
+    throw new AppError(`[${context}] Failed to check follow relationship, followee ID not found: ${followeeId}`, 404, 'User not found');
+  }
+
+  // Check if a Follower row exists for the follower-followee relationship
+  const [follows] = await db.query(
+    'SELECT FOLLOWER_ID FROM Follower WHERE FOLLOWER_ID = ? AND FOLLOWING_ID = ?',
+    [followerId, followeeId]
+  );
+
+  // True if follow relationship found, else false
+  return (follows.length !== 0 ? true : false);
+};
+
+/**
  * Helper function, asserts that requesting user matches target user ID
  * Ensures that users can't initiate operations on other users
  * 
@@ -359,6 +392,80 @@ const unequipItem = asyncHandler(async (req, res) => {
   return res.status(200).json({ message: `Item unequipped successfully` });
 });
 
+/**
+ * @route   POST /api/users/:id/follow
+ * @desc    Follow the user with the given ID
+ * @access  Protected
+ *
+ * @param {import('express').Request}  req  - Express request object
+ * @param {import('express').Response} res  - Express response object
+ * @throws  {AppError} 400                  - If followee is already followed, user is trying to follow themselves, or throwable by parseUserId
+ * @throws  {AppError} 404                  - Throwable by isFollowing
+ * @returns {Promise<void>}                 - Sends HTTP/JSON response confirming follow
+ */
+const followUser = asyncHandler(async (req, res) => {
+  const context    = 'followUser';
+  const followerId = req.user.id;
+  const followeeId = parseUserId(req.params.id, context);
+
+  // Ensure user is not trying to follow themselves
+  if (followerId === followeeId)
+  {
+    throw new AppError(`User ${followerId} cannot follow themselves`, 400, 'User cannot follow themselves.');
+  }
+
+  // Ensure proposed followee exists and that we _don't_ already follow them
+  const alreadyFollowing = await isFollowing(req.db, followerId, followeeId, context);
+  if (alreadyFollowing)
+  {
+    throw new AppError(`User ${followerId} is already following ${followeeId}`, 400, 'User is already followed.');
+  }
+
+  // Insert Follower row, creating follower relationship
+  // NOTE: This is a one-way relationship, this doesn't
+  //       mean that followee follows follower.
+  await req.db.query(
+    'INSERT INTO Follower (FOLLOWER_ID, FOLLOWING_ID) VALUES (?, ?)',
+    [followerId, followeeId]
+  );
+
+  return res.status(200).json({ message: 'User followed successfully' });
+});
+
+/**
+ * @route   DELETE /api/users/:id/follow
+ * @desc    Unfollow the user with the given ID
+ * @access  Protected
+ *
+ * @param {import('express').Request}  req  - Express request object
+ * @param {import('express').Response} res  - Express response object
+ * @throws  {AppError} 400                  - Follower is not already following followee, throwable by parseUserId
+ * @throws  {AppError} 404                  - Throwable by isFollowing
+ * @returns {Promise<void>}                 - Sends HTTP/JSON response confirming unfollow
+ */
+const unfollowUser = asyncHandler(async (req, res) => {
+  const context = 'unfollowUser';
+  const followerId = req.user.id;
+  const followeeId = parseUserId(req.params.id, context);
+  
+  // Ensure proposed followee exists and that we already follow them
+  const alreadyFollowing = await isFollowing(req.db, followerId, followeeId, context);
+  if (!alreadyFollowing)
+  {
+    throw new AppError(`User ${followerId} is not following ${followeeId}`, 400, 'User is not followed.');
+  }
+  
+  // Delete Follower row, eliminating follower relationship
+  // NOTE: This is a one-way relationship, this doesn't
+  //       mean that followee no longer follows follower
+  await req.db.query(
+    'DELETE FROM Follower WHERE FOLLOWER_ID = ? AND FOLLOWING_ID = ?',
+    [followerId, followeeId]
+  );
+
+  return res.status(200).json({ message: 'User unfollowed successfully' });
+});
+
 module.exports = {
   deleteAccount,
   getUserInfo,
@@ -366,4 +473,6 @@ module.exports = {
   getPurchases,
   equipItem,
   unequipItem,
+  followUser,
+  unfollowUser,
 };
